# rsmonad

./: Cargo.toml  README.md
.github/workflows/: rust.yml
rsmonad-macros/: Cargo.toml
rsmonad-macros/src/: lib.rs
src/: alternative.rs  applicative.rs  blastdoor.rs  entropy.rs  flip_bind.rs  fold.rs  functor.rs  gallery.rs  hazard.rs  hkt.rs  laws.rs  lazy.rs  lib-new.rs  lib.rs  list.rs  macros.rs  maybe.rs  monad.rs  monad_laws.rs  monoid.rs  orphans.rs  prod.rs  prod_u8.rs  sum.rs  sum_u8.rs  test.rs
src/with_std/: blastdoor.rs  io.rs  list.rs  mod.rs  orphans.rs  unwind_monad.rs
