[package]
name = "rsmonad-macros"
version = "0.1.0"
authors = ["Will Sturgeon <willstrgn@gmail.com>"]
edition = "2021"
description = "Haskell-style monads for idiomatic Rust."
license = "LGPL-3.0-or-later"
repository = "https://github.com/wrsturgeon/rsmonad"
readme = "README.md"
keywords = ["types", "proofs", "math", "logic", "metaprogramming"]
categories = ["mathematics", "encoding", "no-std", "compilers", "data-structures"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = ">=1"
quote = ">=1"
syn = { version = ">=2", features = ["full"] }
